css/mobile.css
@import url('https://fonts.googleapis.com/css?family=Roboto:100,400&display=swap');

* {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

:root {
    --bg: white;
    --bg80: rgba(255, 255, 255, 70%);
    --bg_header: white;
    --fontBase: black;
    --fontTitle: black;
    --Hue: 176;
    --main_color: hsl(var(--Hue), 80%, 45%);
    --accent_color_light: hsl(var(--Hue), 100%, 80%);
    --accent_color_medium: hsl(var(--Hue), 80%, 45%);
    --accent_color_medium_0: hsla(var(--Hue), 80%, 45%, 1%);
    --accent_color_dark: hsl(var(--Hue), 60%, 30%);
}

body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    padding: 0;
    background-color: var(--bg);
    color: var(--fontBase);
    overflow-x: hidden;
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    text-shadow: 0 1px 0 var(--bg80);
}

.metal-bg {
    background-image: url("../images/musicBackgrounds/mobile/metal.jpg");
}

.alt-bg {
    background-image: url("../images/musicBackgrounds/mobile/alt.jpg");
}

.rock-bg {
    background-image: url("../images/musicBackgrounds/mobile/rock.jpg");
}

.pop-bg {
    background-image: url("../images/musicBackgrounds/mobile/pop.jpg");
    background-attachment: scroll;
}

.rap-bg {
    background-image: url("../images/musicBackgrounds/mobile/rap.jpg");
}

.electro-bg {
    background-image: url("../images/musicBackgrounds/mobile/electro.jpg");
}

a {
    color: var(--accent_color_medium);
    text-decoration: none;
    font-weight: bold;
}

main ul {
    list-style: circle;
}

.head-img {
    display: none;
}

.blank-div {
    display: none;
}

header {
    background-color: var(--bg_header);
    position: fixed;
    min-height: 100px;
    padding-bottom: 10px;
    padding-top: 1px;
    top: 0;
    z-index: 3;
    box-shadow: 0 .3em .3em rgba(0, 0, 0, 25%);
}

.title {
    display: block;
    margin: 0 auto;
    width: 100vw;
    font-weight: 100;
}

.title .logo50,
.title .logo80 {
    margin: 0 auto;
}

.logo50 {
    display: block;
    width: 100px;
    height: 50px;
    background: url("../images/logo50.png") left center;
}

.logo80 {
    display: block;
    width: 160px;
    height: 80px;
    background: url("../images/logo80.png") left center;
}

.subtitle {
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    margin-top: 10px;
    border-top: 1px solid var(--main_color);
    padding-top: 10px;
    width: 50vw;
}

aside.navbar iframe {
    left: -80vw;
    width: 80vw;
    height: 100vh;
    position: fixed;
    background-color: var(--bg);
    top: 0;
    border: 0;
    z-index: 10;
    transition: left .25s;
}
aside.navbar div:not(.dark-back):hover iframe {
    left: 0;
    box-shadow: 0 0 32px;
}
aside.navbar div:not(.dark-back):hover img {
    opacity: 0;
}
aside.navbar div:not(.dark-back):hover+div{
    opacity: .8;
    visibility: visible;
}
aside.navbar img {
    position: fixed;
    z-index: 10;
    top: 1em;
    left: 1em;
    width: 2em;
}

.dark-back {
    opacity: 0;
    visibility: hidden;
    background-color: black;
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: 9;
    height: 100vh;
    transition: opacity .25s;
}

main {
    background-color: var(--bg80);
    display: block;
    margin: 0 auto;
    width: 90vw;
    z-index: 1;
    padding: 1.5em;
    padding-top: 150px;
}

h2,
h3 {
    font-weight: 100;
}

section {
    border-top: 1px solid var(--main_color);
}

footer {
    height: 20vh;
    width: 100vw;
    margin: 0;
    padding: 0;
    opacity: .8;
}

footer iframe {
    border: 0;
    height: 20vh;
    width: 100vw;
    overflow: auto;
}

article {
    padding: 0px 10px;
}

.paragraph,
p {
    text-align: justify;
    text-indent: 2em;
}

figcaption {
    font-style: italic;
}

figure * {
    display: block;
    margin: 0 auto;
    text-align: center;
}

.source {
    font-style: italic;
    margin-top: -20px;
    color: var(--accent_color_dark);
}

.round {
    border-radius: 100%;
}

.profile div>img {
    height: 124px;
}

.profile p {
    font-style: italic;
}

.spotify-integ>div {
    max-width: 300px;
    height: 80px;
    margin: .5em auto;
    z-index: 2;
}

.spotify-integ iframe {
    max-width: 300px;
    height: 80px;
    margin: 0;
    padding: 0;
    border-radius: 1em;
    border: none;
}

.power {
    position: relative;
    bottom: 1ex;
    font-size: 80%;
}

.spotify-icon {
    height: 1.6em;
    filter: invert(52%) sepia(88%) saturate(407%) hue-rotate(89deg) brightness(107%) contrast(98%);
    vertical-align: middle;
}

.yt-icon {
    height: 1.6em;
    filter: invert(9%) sepia(100%) saturate(7486%) hue-rotate(360deg) brightness(105%) contrast(107%);
    vertical-align: middle;
}

.wiki-icon {
    height: 1.6em;
    filter: invert(22%) sepia(18%) saturate(6855%) hue-rotate(215deg) brightness(91%) contrast(93%);
    vertical-align: middle;
}

.computer {
    display: none;
}

.multi-link,
.multi-link * {
    display: inline;
    font-weight: bold;
}

.no-top-separator {
    border-top: none;
}
.yt-integ iframe{
    border: none;
    border-radius: 1em;
}

